// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Vidara vidara.to embed 1`] = `
[
  {
    "format": "hls",
    "label": "Vidara",
    "meta": {
      "extractorId": "vidara",
      "height": 1080,
      "title": "Test Movie 2024",
    },
    "requestHeaders": {
      "Origin": "https://vidara.to",
    },
    "ttl": 21600000,
    "url": "https://gsa31tg1.s1q2105.com/hls/test123/master.m3u8?token=test-token-123",
  },
]
`;

exports[`Vidara vidara.to without filecode returns error 1`] = `
[
  {
    "error": [Error: Could not extract filecode from Vidara URL],
    "format": "unknown",
    "isExternal": true,
    "label": "Vidara",
    "meta": {
      "extractorId": "vidara",
    },
    "ttl": 0,
    "url": "https://vidara.to/",
  },
]
`;

exports[`Vidara vidara.to without streaming_url returns error 1`] = `
[
  {
    "error": [Error: No streaming_url in Vidara API response],
    "format": "unknown",
    "isExternal": true,
    "label": "Vidara",
    "meta": {
      "extractorId": "vidara",
    },
    "ttl": 0,
    "url": "https://vidara.to/e/nostream",
  },
]
`;
